--- a/lakehouse/01.bronze/processaDiario.ipynb
+++ b/lakehouse/01.bronze/processaDiario.ipynb
@@ -6,7 +6,7 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "8e6aa235-1e07-4c9c-8516-af553ddc8f9d",
+     "nuid": "5addd897-1216-4d4d-b37d-ad230fa3b047",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -14,9 +14,10 @@
    },
    "source": [
     "\n",
-    "## Objetivo: Esse notebook faz o processamento dos dados históricos que se encontram na camada landing\n",
+    "## Objetivo: Esse notebook faz o processamento dos dados diários que se encontram na camada landing\n",
     "\n",
-    "![Arquiteture de Ingestão Landing - Bronze](https://github.com/douglas-engenheirodedados/mvpEngDadosPosPuc/blob/529cc4ab58fa85f2476028b240bed918eb465830/docs/images/arquiterura-ingestao.png?raw=true)\n"
+    "![Arquiteture de Ingestão Landing - Bronze](https://github.com/douglas-engenheirodedados/mvpEngDadosPosPuc/blob/529cc4ab58fa85f2476028b240bed918eb465830/docs/images/arquiterura-ingestao.png?raw=true)\n",
+    "\n"
    ]
   },
   {
@@ -26,7 +27,7 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "2d44c8e7-f154-4ba5-8859-0cab34ad4a8b",
+     "nuid": "24dd145d-ebdb-44a1-b653-170fbb2a0ddb",
      "showTitle": true,
      "tableResultSettingsMap": {},
      "title": "Import Libraries"
@@ -34,8 +35,7 @@
    },
    "outputs": [],
    "source": [
-    "from pyspark.sql.functions import col, explode\n",
-    "from pyspark.sql.types import StructType, StructField, StringType, TimestampType, DoubleType, IntegerType, ArrayType"
+    "from pyspark.sql.functions import col, explode, from_json, schema_of_json, input_file_name"
    ]
   },
   {
@@ -45,7 +45,7 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "ebf55eb0-e0ba-48aa-9656-c890dbb7b40e",
+     "nuid": "1023e686-2331-4240-a79f-b35f2054ccdf",
      "showTitle": true,
      "tableResultSettingsMap": {},
      "title": "Catolog"
@@ -64,7 +64,7 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "e83071d3-306f-46eb-9c48-866627299753",
+     "nuid": "c0aeebb7-b007-4c64-ad41-548d39c9e27e",
      "showTitle": true,
      "tableResultSettingsMap": {},
      "title": "Schema & Volume"
@@ -73,7 +73,8 @@
    "outputs": [],
    "source": [
     "spark.sql(\"create schema if not exists bronze\")\n",
-    "spark.sql(\"create volume if not exists bronze.checkpoint_historico_cripto\")"
+    "spark.sql(\"create volume if not exists bronze.checkpoint_diario_cripto\")\n",
+    "spark.sql(\"create volume if not exists bronze.schema_diario_cripto\")"
    ]
   },
   {
@@ -83,7 +84,7 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "c823bc13-2b1e-4e1c-bfae-9559a65c4bb7",
+     "nuid": "9227abb1-7d7d-4c8c-bdb6-26d7c01ace7b",
      "showTitle": true,
      "tableResultSettingsMap": {},
      "title": "Parâmetros"
@@ -91,9 +92,10 @@
    },
    "outputs": [],
    "source": [
-    "landing_path = \"s3://01.landing/historico/\"\n",
-    "check_point_path = \"/Volumes/lakehouse/bronze/checkpoint_historico_cripto\" \n",
-    "table_name = \"bronze.historico_cripto\""
+    "path_landing_diario = \"s3://01.landing/cripto/\"\n",
+    "check_point_path = \"/Volumes/lakehouse/bronze/checkpoint_diario_cripto\" \n",
+    "schema_path = \"/Volumes/lakehouse/bronze/schema_diario_cripto\"\n",
+    "table_name = \"bronze.diario_cripto\""
    ]
   },
   {
@@ -103,7 +105,7 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "3a2f442d-3a67-470c-90ed-f4121f5fc7f1",
+     "nuid": "e4175f14-1de7-45e3-9ff1-01c4e313fe00",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -111,45 +113,15 @@
    },
    "outputs": [],
    "source": [
-    "# Define schema explícito (melhor para performance e evitar problemas de inferência)\n",
-    "schema = StructType([\n",
-    "    StructField(\"metadata\", StructType([\n",
-    "        StructField(\"extraction_date\", StringType()),\n",
-    "        StructField(\"source\", StringType()),\n",
-    "        StructField(\"asset_name\", StringType()),\n",
-    "        StructField(\"ticker\", StringType()),\n",
-    "        StructField(\"total_records\", StringType()),\n",
-    "    ])),\n",
-    "    StructField(\"data\", ArrayType(StructType([\n",
-    "        StructField(\"timestamp\", StringType()),\n",
-    "        StructField(\"price_usd\", DoubleType())\n",
-    "    ])))\n",
-    "])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "40e97c43-c491-4383-b6a6-3b2064620e5c",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Leitura com Auto Loader\n",
-    "df_raw = (\n",
+    "# Leitura com inferência de schema e multiline\n",
+    "df_raw_diario = (\n",
     "    spark.readStream\n",
     "    .format(\"cloudFiles\")\n",
     "    .option(\"cloudFiles.format\", \"json\")\n",
-    "    .option(\"multiline\", \"true\")\n",
-    "    .schema(schema)  \n",
-    "    .load(landing_path)\n",
+    "    .option(\"cloudFiles.inferColumnTypes\", \"true\")\n",
+    "    .option(\"cloudFiles.schemaLocation\", schema_path)\n",
+    "    .option(\"multiline\", \"true\")  # Essencial para arquivos JSON com estrutura aninhada\n",
+    "    .load(path_landing_diario)\n",
     ")"
    ]
   },
@@ -160,7 +132,7 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "1abe327b-a94d-4c5f-9dc3-5f19c4f8c6e1",
+     "nuid": "502a84d0-aff0-49d2-acc8-94e6a78e7b47",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -168,19 +140,17 @@
    },
    "outputs": [],
    "source": [
-    "# Explodir o array de data\n",
-    "from pyspark.sql.functions import explode, col, input_file_name\n",
-    "\n",
+    "# Explode os dados mantendo os metadados\n",
     "df_transformed = (\n",
-    "    df_raw\n",
-    "    .withColumn(\"record\", explode(col(\"data\")))\n",
+    "    df_raw_diario\n",
+    "    .withColumn(\"record\", explode(\"data\"))\n",
     "    .select(\n",
-    "        col(\"metadata.asset_name\").alias(\"asset_name\"),\n",
-    "        col(\"metadata.ticker\").alias(\"ticker\"),\n",
-    "        col(\"metadata.extraction_date\").alias(\"extraction_date\"),\n",
-    "        col(\"metadata.source\").alias(\"source\"),\n",
     "        col(\"record.timestamp\").alias(\"timestamp\"),\n",
     "        col(\"record.price_usd\").alias(\"price_usd\"),\n",
+    "        col(\"metadata.asset_name\").alias(\"asset_name\"),\n",
+    "        col(\"metadata.extraction_date\").alias(\"extraction_date\"),\n",
+    "        col(\"metadata.source\").alias(\"source\"),\n",
+    "        col(\"metadata.time_interval\").alias(\"time_interval\"),\n",
     "        input_file_name().alias(\"source_file\")\n",
     "    )\n",
     ")"
@@ -193,7 +163,7 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "14eb9fee-840c-483a-928d-b69887b338d4",
+     "nuid": "7a9d3708-4e40-4635-803f-30cbe716094b",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -201,15 +171,15 @@
    },
    "outputs": [],
    "source": [
-    "# Escrita no Delta Lake camada bronze\n",
+    "# Escrita no Delta Lake (bronze diário)\n",
     "(\n",
     "    df_transformed.writeStream\n",
     "    .format(\"delta\")\n",
     "    .outputMode(\"append\")\n",
-    "    .option(\"checkpointLocation\", check_point_path)\n",
+    "    .option(\"checkpointLocation\",check_point_path)\n",
     "    .trigger(availableNow=True)\n",
     "    .table(table_name)\n",
-    ")"
+    ")\n"
    ]
   }
  ],
@@ -220,10 +190,8 @@
    "environmentMetadata": null,
    "inputWidgetPreferences": null,
    "language": "python",
-   "notebookMetadata": {
-    "pythonIndentUnit": 4
-   },
-   "notebookName": "processaHistorico",
+   "notebookMetadata": {},
+   "notebookName": "processaDiario",
    "widgets": {}
   },
   "language_info": {
