add silver notebook

--- a/lakehouse/01.bronze/processaDiario.ipynb
+++ b/lakehouse/01.bronze/processaDiario.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "5addd897-1216-4d4d-b37d-ad230fa3b047",
      "showTitle": false,
@@ -25,7 +28,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "24dd145d-ebdb-44a1-b653-170fbb2a0ddb",
      "showTitle": true,
@@ -43,7 +49,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "1023e686-2331-4240-a79f-b35f2054ccdf",
      "showTitle": true,
@@ -62,7 +71,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "c0aeebb7-b007-4c64-ad41-548d39c9e27e",
      "showTitle": true,
@@ -82,7 +94,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "9227abb1-7d7d-4c8c-bdb6-26d7c01ace7b",
      "showTitle": true,
@@ -103,7 +118,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "e4175f14-1de7-45e3-9ff1-01c4e313fe00",
      "showTitle": false,
@@ -130,7 +148,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "502a84d0-aff0-49d2-acc8-94e6a78e7b47",
      "showTitle": false,
@@ -161,7 +182,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "7a9d3708-4e40-4635-803f-30cbe716094b",
      "showTitle": false,
@@ -190,7 +214,9 @@
    "environmentMetadata": null,
    "inputWidgetPreferences": null,
    "language": "python",
-   "notebookMetadata": {},
+   "notebookMetadata": {
+    "pythonIndentUnit": 4
+   },
    "notebookName": "processaDiario",
    "widgets": {}
   },
