--- a/catalogo_de_dados/catalogo_de_dados_silver.md.ipynb
+++ b/catalogo_de_dados/catalogo_de_dados_silver.md.ipynb
@@ -41,12 +41,17 @@
     "  - `bronze_historico`: Arquivos JSON históricos em `landing/historico/{ativo}.json`.  \n",
     "  - `bronze_intradiario`: Arquivos JSON diários em `landing/cripto/{ativo}/*.json`.\n",
     "\n",
+    "\n",
+    "![Linhagem Bronze para Silver](https://github.com/douglas-engenheirodedados/mvpEngDadosPosPuc/blob/720bcd064ab452e3073a9e67023b05184c2f1637/docs/images/linhagem-bronze-silver?raw=true)\n",
+    "\n",
+    "\n",
+    "\n",
     "- **Transformação:**  \n",
-    "  - Os registros dos arquivos das camadas Bronze são lidos de forma incremental via Structured Streaming com Change Data Feed (CDF) e inseridos (append) na camada Silver.  \n",
-    "  - Os dados históricos e intradiários são unificados em uma única entidade: `ativo_financeiro`.\n",
+    "  - Os registros dos arquivos das camadas Bronze são lidos de forma incremental via Structured Streaming e inseridos (append) na camada Silver.  \n",
+    "  - Os dados históricos e intradiários são unificados em uma única entidade: `cripto`.\n",
     "\n",
     "- **Destino:**  \n",
-    "  - Tabela Silver `ativo_financeiro` salva em formato Delta, garantindo time travel, otimizações com Liquid Clusters e integração com o Unity Catalog para auditabilidade e rastreamento da linhagem.\n",
+    "  - Tabela Silver `cripto` salva em formato Delta, garantindo time travel, otimizações com Liquid Clusters e integração com o Unity Catalog para auditabilidade e rastreamento da linhagem.\n",
     "\n",
     "---\n",
     "\n",
