--- a/analise/analise_qualidade_silver.ipynb
+++ b/analise/analise_qualidade_silver.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "# 🔍 Análise da Qualidade dos Dados - Camada Silver\n",
     "\n",
-    "Este notebook tem como objetivo avaliar a qualidade dos dados presentes na tabela `silver_criptoativos`. Serão verificadas:\n",
+    "Este notebook tem como objetivo avaliar a qualidade dos dados presentes na tabela `silver.cripto`. Serão verificadas:\n",
     "- Presença de valores nulos\n",
     "- Valores fora do domínio esperado\n",
     "- Duplicidade de registros\n",
